fix(output): add block spacing

--- a/src/components/output.css
+++ b/src/components/output.css
@@ -7,6 +7,7 @@ output {
   border-radius: var(--border-radius);
   color: var(--c-surface-variant-fg);
   display: block;
+  margin: var(--block-spacing-y) 0;
   padding: 1rem;
 
   &[data-title]::before {
